@@ -11,7 +11,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>An object that gets invoked at the beginning of an application but before the application main loop starts. It's used largely for application setup--- for example, reading RC files.</summary>
-    <remarks/>
+    <remarks />
   </Docs>
   <Base>
     <BaseTypeName>System.Object</BaseTypeName>
@@ -31,7 +31,7 @@
       <Docs>
         <summary>Registers a function to be called when the mainloop is started. </summary>
         <param name="function">a <see cref="T:Gtk.Function" /></param>
-        <remarks/>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -46,72 +46,21 @@
       </Docs>
     </Member>
     <Member MemberName="Check">
-      <MemberSignature Language="C#" Value="public static bool Check (out int argc, string argv);" />
+      <MemberSignature Language="C#" Value="public static bool Check (ref string [] argv);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Boolean</ReturnType>
       </ReturnValue>
       <Parameters>
-        <Parameter Name="argc" Type="System.Int32&amp;" RefType="out" />
-        <Parameter Name="argv" Type="System.String" />
+        <Parameter Name="argv" Type="System.String[]&amp;" RefType="ref" />
       </Parameters>
       <Docs>
-        <summary>Initializes Gtk# for operation, probes window system. </summary>
-        <param name="argc">The number of if arguments. Changed if any arguments were handled.</param>
-        <param name="argv">a <see cref="T:System.String" /></param>
+        <summary>Initializes Gtk# for operation, probes window system.</summary>
+        <param name="argv">a <see cref="T:System.String[]" /></param>
+        <param name="argv">The command line arguments passed in. Changed if any arguments were handled.</param>
         <returns>True if the toolkit initialized correctly, false otherwise. </returns>
-        <remarks>Aside from the arguments, this function behaves in the same way as <see cref="T:Gtk.Application.InitCheck" />. Br returning whether or not the toolkit initialized correctly, it allows the application to fall back to a non-GUI interface, should the developer be so inclined to write one.
-
-
-<block subset="none" type="note">
-            <para>In Gtk# 0.98, this function's second argument is of type <see cref="T:System.String" />, when it should be an "out String[]". Until corrected, this function shall not work as expected. (FIXME 1.0: is this fixed?)</para>
-          </block></remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="CheckAbiCheck">
-      <MemberSignature Language="C#" Value="public static bool CheckAbiCheck (out int argc, string argv, int num_checks, int sizeof_GtkWindow, int sizeof_GtkBox);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Boolean</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="argc" Type="System.Int32&amp;" RefType="out" />
-        <Parameter Name="argv" Type="System.String" />
-        <Parameter Name="num_checks" Type="System.Int32" />
-        <Parameter Name="sizeof_GtkWindow" Type="System.Int32" />
-        <Parameter Name="sizeof_GtkBox" Type="System.Int32" />
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <param name="argc">a <see cref="T:System.Int32&amp;" /></param>
-        <param name="argv">a <see cref="T:System.String" /></param>
-        <param name="num_checks">a <see cref="T:System.Int32" /></param>
-        <param name="sizeof_GtkWindow">a <see cref="T:System.Int32" /></param>
-        <param name="sizeof_GtkBox">a <see cref="T:System.Int32" /></param>
-        <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks/>
-      </Docs>
-    </Member>
-    <Member MemberName="AbiCheck">
-      <MemberSignature Language="C#" Value="public static int AbiCheck (string argv, int num_checks, int sizeof_GtkWindow, int sizeof_GtkBox);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Int32</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="argv" Type="System.String" />
-        <Parameter Name="num_checks" Type="System.Int32" />
-        <Parameter Name="sizeof_GtkWindow" Type="System.Int32" />
-        <Parameter Name="sizeof_GtkBox" Type="System.Int32" />
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <param name="argv">a <see cref="T:System.String" /></param>
-        <param name="num_checks">a <see cref="T:System.Int32" /></param>
-        <param name="sizeof_GtkWindow">a <see cref="T:System.Int32" /></param>
-        <param name="sizeof_GtkBox">a <see cref="T:System.Int32" /></param>
-        <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks/>
+        <remarks>Aside from the arguments, this function behaves in the same way as <see cref="T:Gtk.Application.InitCheck" />. By returning whether or not the toolkit initialized correctly, it allows the application to fall back to a non-GUI interface, should the developer be so inclined to write one.
+        </remarks>
       </Docs>
     </Member>
   </Members>
