@@ -95,5 +95,19 @@
         </remarks>
       </Docs>
     </Member>
+    <Member MemberName="GType">
+      <MemberSignature Language="C#" Value="public static GLib.GType GType { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>GLib.GType</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Native type value.</summary>
+        <returns>a <see cref="T:GLib.GType" /></returns>
+        <remarks>
+        </remarks>
+      </Docs>
+    </Member>
   </Members>
 </Type>
