@@ -1,3 +1,10 @@
+2004-09-03 Mike Kestner <mkestner@ximian.com>
+
+	* en/Gdk/Pixmap.cs : updates to sigs of FromXpm* methods.
+	* en/Gtk/Init.cs : fix Check and remove AbiCheck.
+	* en/Gtk/Invisible.cs : add ctor.
+	* en/Gtk/NodeStore.cs : add GType prop.
+
 2004-09-02 Mike Kestner <mkestner@ximian.com>
 
 	* updater/* : rework of duncan's updater from monodoc that doesn't
